--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
 {
-  "name": "slack-clone",
+  "name": "slack",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/lab": "^5.0.0-alpha.77",
+    "@mui/material": "^5.6.1",
+    "@mui/styles": "^5.6.1",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^12.0.0",
+    "dayjs": "^1.11.1",
+    "emoji-mart": "^3.0.1",
+    "firebase": "^10.4.0",
+    "firebase-tools": "^12.7.0",
+    "md5": "^2.3.0",
+    "react": "^17.0.2",
+    "react-avatar-editor": "^12.0.0",
+    "react-colorful": "^5.5.1",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
